--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">Foodtrac</a>
+            <img src="/images/foodtrac_logo.png" alt="logo" id="navbar__logo">
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
