--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
+                <li class="navbar__search">
+                    <input type="text" placeholder="Search...">
+                </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">Tech</a>
+                    <a href="/tech.html" class="navbar__links">Favorites</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Products</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="/" class="button">Sign Up</a>
+                <li class="navbar__settings">
+                    <a href="/" class="navbar__button">Settings</a>
                 </li>
             </ul>
         </div>
@@ -41,93 +41,14 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>Next Generation</h1>
-                <h2>Technology</h2>
-                <p>See what makes us different.</p>
-                <button class="main__btn"><a href="/">Get Started
-                </a></button>
+                <h1>Food</h1>
+                <h2>Items</h2>
             </div>
             <div class="main__img--container">
-                <img src="images/pic1.svg" alt="pic" id="main__img">
-            </div>
-        </div>
-    </div>
 
-    <!-- Services Section -->
-    <div class="services">
-        <h1>See what the hype is about</h1>
-        <div class="services__container">
-            <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
-                <button>Get Started</button>
-            </div>
-            <div class="services__card">
-                <h2>Are you ready?</h2>
-                <p>Take the leap</p>
-                <button>Get Started</button>
             </div>
         </div>
-    </div>
-
-    <!-- Footer Section -->
-    <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonals</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonals</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-            </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonals</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonals</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-            </div>
-        </div>
-        <div class="social__media">
-            <div class="social__media--wrap">
-                <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>NEXT</a>
-                </div>
-                <p class="website__rights">&copy NEXT 2022. ALL rights reserved</p>
-                <div class="social__icons">
-                    <a href="/" class="social__icons--link" target="_blank">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                    <a href="/" class="social__icons--link" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>   
-                </div>
-            </div>
-        </div>
-    </div>
-
+    </div>   
     <script src="app.js"></script>
 </body>
 </html>
