simplified code and layout

--- a/index.html
+++ b/index.html
@@ -13,42 +13,33 @@
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
+        <img src="/images/foodtrac_logo.png" alt="logo" id="navbar__logo">
         <div class="navbar__container">
-            <img src="/images/foodtrac_logo.png" alt="logo" id="navbar__logo">
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
             <ul class="navbar__menu">
-                <li class="navbar__search">
-                    <input type="text" placeholder="Search...">
-                </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">Favorites</a>
                 </li>
-                <li class="navbar__settings">
-                    <a href="/" class="navbar__button">Settings</a>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links">Settings</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <div class="navbar__toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
 
     <!-- Hero Section -->
     <div class="main">
         <div class="main__container">
-            <div class="main__content">
-                <h1>Food</h1>
-                <h2>Items</h2>
-            </div>
-            <div class="main__img--container">
-
-            </div>
+ 
         </div>
-    </div>   
+    </div> 
     <script src="app.js"></script>
 </body>
 </html>
