--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodtrac</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Navbar Section -->
@@ -28,16 +26,25 @@
             </ul>
         </div>
     </nav>
-    <div class="navbar__toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </div>
 
     <!-- Hero Section -->
     <div class="main">
         <div class="main__container">
- 
+            <form>
+                <input type="text" name="text" id="txt" required>
+                <button type="submit" class="btn__add">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                </button>
+            </form>
+            <div class="item__box">
+                <ul class="items">
+                    <li>Apple<span>x</span></li>
+                    <li>Apple<span>x</span></li>
+                    <li>Apple<span>x</span></li>
+                    <li>Apple<span>x</span></li>
+                </ul>
+            </div>
+            
         </div>
     </div> 
     <script src="app.js"></script>
