--- a/completed.html
+++ b/completed.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodtrac</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navbar Section -->
@@ -15,13 +15,13 @@
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
+                    <a href="/" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/finished.html" class="navbar__links">Finished</a>
+                    <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Settings</a>
+                    <a href="/" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
                 </li>
             </ul>
         </div>
@@ -32,10 +32,8 @@
         <div class="main__container">
             <div class="item__box">
                 <ul class="items">
-  
                 </ul>
             </div>
-            
         </div>
     </div> 
     <script src="app.js"></script>
