--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodtrac</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-        <img src="/images/foodtrac_logo.png" alt="logo" id="navbar__logo">
+        <img src="images/foodtrac_logo.png" alt="logo" id="navbar__logo">
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
+                    <a href="/index.html" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/finished.html" class="navbar__links">Finished</a>
+                    <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Settings</a>
+                    <a href="/" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
                 </li>
             </ul>
         </div>
@@ -31,9 +31,9 @@
     <div class="main">
         <div class="main__container">
             <form>
-                <input type="text" name="text" id="txt" required>
+                <input type="text" name="text" id="txt" required="" oninvalid="this.setCustomValidity('Please add food item.')">
                 <button type="submit" class="btn__add">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
+                    <i class="fa-solid fa-plus"></i>
                 </button>
             </form>
             <div class="item__box">
