--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-        <img src="images/foodtrac_logo.png" alt="logo" id="navbar__logo">
+        <img src="./images/foodtrac_logo.png" alt="logo" id="navbar__logo">
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
