--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/index.html" class="navbar__links"><i class="fa fa-house"></i>Home</a>
+                    <a href="./index.html" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
                 </li>
             </ul>
         </div>
