--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="./index.html" class="navbar__links"><i class="fa fa-house"></i>Home</a>
+                    <a href="./" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
