added settings alert

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
                     <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
+                    <a href="/settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
                 </li>
             </ul>
         </div>
