--- a/settings.html
+++ b/settings.html
@@ -31,8 +31,7 @@
     <div class="main">
         <div class="main__container">
             <div class="item__box">
-                <ul class="items" id="completedlist">   
-                </ul>
+              <button>Alert</button>
             </div>
         </div>
     </div> 
