--- a/settings.html
+++ b/settings.html
@@ -7,18 +7,19 @@
     <title>Foodtrac</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
 </head>
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-        <img src="/images/foodtrac_logo.png" alt="logo" id="navbar__logo">
+        <img src="./images/foodtrac_logo.png" alt="logo" id="navbar__logo">
         <div class="navbar__container">
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links"><i class="fa fa-house"></i>Home</a>
+                    <a href="./" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/completed.html" class="navbar__links"><i class="fa-solid fa-drumstick-bite"></i>Completed</a>
+                    <a href="/alerts.html" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
@@ -30,11 +31,11 @@
     <!-- Hero Section -->
     <div class="main">
         <div class="main__container">
-            <div class="item__box">
-              <button>Alert</button>
+            <div class="item__container">
             </div>
         </div>
     </div> 
-    <script src="app.js"></script>
+    <script src="app.js"></script> 
+    <script src="https://unpkg.com/html5-qrcode"></script>
 </body>
 </html>
