--- a/settings.html
+++ b/settings.html
@@ -19,10 +19,10 @@
                     <a href="./" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/alerts.html" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
+                    <a href="./alerts.html" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
+                    <a href="./settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
                 </li>
             </ul>
         </div>
@@ -30,9 +30,35 @@
 
     <!-- Hero Section -->
     <div class="main">
-        <div class="main__container">
-            <div class="item__container">
+        <div class="settings__container">
+            <div class="notifications">
+            <h2><i class="fa-solid fa-bell"></i>Notifications</h2>
+            <div class="switch__container">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>  
             </div>
+            </div>  
+            
+            <div class="location">
+            <h2><i class="fa-solid fa-location-dot"></i>Location</h2>
+            <div class="switch__container">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>  
+            </div>  
+            </div>
+            <div class="storage">
+            <h2><i class="fa-solid fa-box"></i>Storage</h2>
+            <div class="switch__container">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>  
+            </div> 
+            </div> 
         </div>
     </div> 
     <script src="app.js"></script> 
