--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <a href="./" class="navbar__links"><i class="fa fa-house"></i>Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/alerts.html" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
+                    <a href="./alerts.html" class="navbar__links"><i class="fa-solid fa-bell"></i>Alerts</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
+                    <a href="./settings.html" class="navbar__links"><i class="fa-solid fa-gear"></i>Settings</a>
                 </li>
             </ul>
         </div>
